# oesterreichische-schulen-code

./: pyproject.toml  scrapy.cfg
austrian_schools/: items.py  middlewares.py  pipelines.py  settings.py
austrian_schools/spiders/: schools.py
