[tool.poetry]
name = "austrian-schools"
version = "0.1.0"
description = ""
authors = ["Raphael Krupinski <10319569-mattesilver@users.noreply.gitlab.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scrapy-splash = "^0.8.0"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
